--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,9 @@
 /* TODO Add site wide styles */
+html,
+body {
+    font-family: 'Nunito';
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
