--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -406,13 +406,14 @@
 }
 
 
-.bot-splash-wrapper-1{
-    display:flex;
+.bot-splash-wrapper-1 {
+    display: flex;
     width: 100%;
     justify-content: flex-end;
     align-items: center;
 
 }
+
 .bot-splash-desc-1 {
     display: flex;
     flex-direction: column;
@@ -423,13 +424,14 @@
 
 }
 
-.bot-splash-wrapper-2{
-    display:flex;
+.bot-splash-wrapper-2 {
+    display: flex;
     width: 100%;
     justify-content: flex-start;
     align-items: center;
 
 }
+
 .bot-splash-desc-2 {
     display: flex;
     flex-direction: column;
@@ -439,13 +441,14 @@
     height: 440px;
 }
 
-.bot-splash-wrapper-3{
-    display:flex;
+.bot-splash-wrapper-3 {
+    display: flex;
     width: 100%;
     justify-content: flex-end;
     align-items: center;
 
 }
+
 .bot-splash-desc-3 {
     width: 540px;
     height: 500px;
@@ -453,13 +456,14 @@
 }
 
 
-.bot-splash-wrapper-4{
-    display:flex;
+.bot-splash-wrapper-4 {
+    display: flex;
     width: 100%;
     justify-content: flex-start;
     align-items: center;
 
 }
+
 .bot-splash-desc-4 {
     width: 540px;
     height: 500px;
@@ -609,4 +613,115 @@
     height: 15px;
     margin-right: 15px;
     filter: invert(45%) sepia(86%) saturate(1286%) hue-rotate(325deg) brightness(102%) contrast(97%);
+}
+
+.all-the-feats-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 180px;
+}
+
+#feat-title {
+    font-weight: 800;
+    font-size: 32px;
+}
+
+#feat-para {
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: 20px;
+    color: gray;
+}
+
+#feat-link {
+    font-weight: 800;
+    font-size: 20px;
+    color: gray;
+}
+
+
+.bottom-grid-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 1000px;
+}
+
+.bottom-grid {
+    display: grid;
+    margin-top: 50px;
+    grid-template-columns: repeat(3, 333px);
+    gap: 20px;
+}
+
+.bottom-grid-card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 20px;
+    width: 333px;
+    height: 210px;
+
+}
+
+.bottom-grid-card-title {
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.bottom-grid-card-para {
+    color: gray;
+}
+
+#grid-icon {
+    height: 50px;
+    margin-bottom: 15px;
+}
+
+.toggle p {
+    animation: fade 2s;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.collapse-button #plus-icon {
+    animation-name: out;
+    animation-duration: 2s;
+}
+
+.collapse-button:hover #plus-icon {
+    animation-name: in;
+    animation-duration: 2s;
+}
+
+
+@keyframes in {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes out {
+    from {
+        transform: rotate(360deg);
+    }
+
+    to {
+        transform: rotate(0deg);
+    }
 }
