--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -130,6 +130,8 @@
 
 
   .dropdown-links {
+    display: flex;
+    align-items: center;
     padding: 10px 10px 10px 15px;
     /* display: block; */
   }
