--- a/react-app/src/components/User.css
+++ b/react-app/src/components/User.css
@@ -410,13 +410,25 @@
 
 #delete-icons {
     height: 15px;
+    transition: .5s;
     margin-right: 5px;
     filter: invert(94%) sepia(8%) saturate(20%) hue-rotate(314deg) brightness(95%) contrast(80%);
 }
 
 #edit-icons {
     height: 15px;
+    transition: .5s;
     filter: invert(94%) sepia(8%) saturate(20%) hue-rotate(314deg) brightness(95%) contrast(80%);
+}
+
+#delete-icons:hover {
+    cursor: pointer;
+    filter: invert(0%) sepia(96%) saturate(4%) hue-rotate(338deg) brightness(104%) contrast(98%);
+}
+
+#edit-icons:hover {
+    cursor: pointer;
+    filter: invert(0%) sepia(96%) saturate(4%) hue-rotate(338deg) brightness(104%) contrast(98%);
 }
 
 .d-e-align {
