splash page user card redir

--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -957,3 +957,7 @@
         transform: rotate(0deg);
     }
 }
+
+#un-style-nav-link:link {text-decoration: none;}
+#un-style-nav-link:visited {text-decoration: none;}
+#un-style-nav-link:focus {text-decoration: none;}
