--- a/react-app/src/components/User.css
+++ b/react-app/src/components/User.css
@@ -434,3 +434,98 @@
 .d-e-align {
     margin-top: 2px;
 }
+
+#comment-fixed-container {
+    position: fixed;
+    left: 878px;
+    bottom: 680px;
+}
+
+#comment-post-img-id {
+    margin-top: 5px;
+    width: 100%;
+    height: 10px;
+    object-fit: cover;
+    border-radius: 999px;
+}
+
+  #comment-fixed-upper-div {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+    position: absolute;
+    background-color: white;
+    padding: 10px 10px;
+    border-radius: 20px;
+    top: 10px;
+    right: 0px;
+    width: 380px;
+    height: 620px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  }
+
+  .dropdown-links:hover {
+    background-color: rgb(231, 231, 231);
+    cursor: pointer;
+  }
+
+
+
+  .dropdown-links {
+    display: flex;
+    align-items: center;
+    padding: 10px 10px 10px 15px;
+    /* display: block; */
+  }
+
+  .dropdown-button {
+    display: block;
+  }
+
+  #comment-fixed-sections {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding: 5px 10px;
+    border-bottom: 1px lightgray solid;
+  }
+
+  .dropdown-text-rows {
+    padding: 0px 0px 10px 5px;
+    overflow: ellipsis;
+  }
+  .dropdown-top-sections{
+    padding: 5px 5px;
+  }
+  .dropdown-email {
+    padding-top: 10px;
+  }
+
+  .dropdown-about-me{
+    border: none;
+    background-color: white;
+    text-align: left;
+    font-size: 16px;
+
+  }
+
+  .dropdown-about-me:hover{
+    background-color: rgb(231, 231, 231);
+
+  }
+
+  .dropdown-about-me{
+    padding-top: 10px;
+  }
+
+  #dropdown-links-container {
+    padding-top: 10px;
+  }
+
+  #leave-comment-session-user-ava {
+    height: 30px;
+    width: 30px;
+    object-fit: cover;
+    border-radius: 999px;
+  }
