--- a/react-app/src/components/Carousel/Carousel.css
+++ b/react-app/src/components/Carousel/Carousel.css
@@ -41,3 +41,7 @@
 
   .item:first-child { margin-right: 0px !important;}
   .item:last-child { margin-left: 0px !important;}
+
+  #dont-look-at-this{
+    color: transparent;
+  }
