--- a/react-app/src/components/User.css
+++ b/react-app/src/components/User.css
@@ -553,3 +553,138 @@
 #post-text-input:active {
     border: transparent;
 }
+
+.buy-latte-for-wrapper {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.submit-latte-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 250px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 20px;
+}
+
+.submit-latte-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 85%;
+    height: 80%;
+}
+
+.submit-latte-top {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    height: 35px;
+}
+
+.buy-latte-counter {
+    display: flex;
+    justify-content: space-between;
+    /* border: blue 1px solid; */
+}
+
+.btn__container {
+    display: flex;
+    /* width: 100px; */
+    /* border: red 1px solid; */
+}
+
+.counter__output {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45px;
+    width: 70px;
+    border: lightgray 2px solid;
+    border-radius: 999px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.control__btn-sub {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 20px;
+    color: gray;
+    height: 45px;
+    width: 45px;
+    background-color: #ececec;
+    border-radius: 999px;
+    transition: 1s;
+    border: transparent;
+}
+
+.control__btn-add {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ff5f5f;
+    font-weight: 700;
+    font-size: 20px;
+    height: 45px;
+    width: 45px;
+    background-color: #ffeeed;
+    border-radius: 999px;
+    transition: 1s;
+    border: transparent;
+}
+
+.control__btn-add:hover {
+    cursor: pointer;
+    background-color: #ffe5e4;
+}
+
+.control__btn-sub:hover {
+    cursor: pointer;
+    background-color: #e2e2e2;
+}
+
+#buy-latte-ava-icon {
+    width: 45px;
+    height: 45px;
+    border-radius: 999px;
+    object-fit: cover;
+}
+
+#latte-comment-input {
+    font-family: 'Nunito';
+    padding-left: 20px;
+    height: 45px;
+    width: 425px;
+    border: lightgray 2px solid;
+    border-radius: 10px;
+    font-size: 16px;
+}
+
+#latte-comment-input::placeholder { /* Microsoft Edge */
+    color: rgb(168, 199, 209);
+}
+
+.leave-latte-submit-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 999px;
+    width: 100%;
+    height: 45px;
+    background-color: #FF5F5F;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+    transition: .5s;
+}
+
+.leave-latte-submit-wrapper:hover {
+    cursor: pointer;
+    background-color: #ff5353;
+}
